--- a/package.json
+++ b/package.json
@@ -21,9 +21,14 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.2.0",
+    "@mui/material": "^7.2.0",
     "axios": "^1.10.0",
     "express": "^4.18.2",
     "firebase": "^11.10.0",
+    "react-country-state-city": "^1.1.12",
     "zod": "^3.23.8"
   },
   "devDependencies": {
